--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,7 +72,7 @@
     scroll-behavior: smooth !important;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-x-hidden;
     font-feature-settings: 'rlig' 1, 'calt' 1;
   }
 }
