--- a/styles/style.css
+++ b/styles/style.css
@@ -28,3 +28,14 @@
   height: 100%;
   @apply bg-[#010412]/80;
 }
+
+
+.text-container {
+  height: 200px;
+}
+
+@media (min-width: 768px) { /* Adjust the breakpoint as needed */
+  .text-container {
+    height: auto;
+  }
+}
