--- a/styles/style.css
+++ b/styles/style.css
@@ -39,3 +39,12 @@
     height: auto;
   }
 }
+
+@media (max-width: 1000px) {
+  .mobile-flex {
+    flex-direction: column;
+  }
+  .mobile-flex > div {
+    width: 100% !important;
+  }
+}
