--- a/styles/style.css
+++ b/styles/style.css
@@ -48,3 +48,21 @@
     width: 100% !important;
   }
 }
+
+
+.custom-checkbox {
+  width: 18px;
+  height: 18px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: white;
+  border: 2px solid rgb(174, 174, 174);
+  border-radius: 4px;
+  outline: none;
+}
+
+.custom-checkbox:checked {
+  background: white url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z'/%3E%3C/svg%3E") center/16px no-repeat;
+}
+
