--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@
 
 /* For Webkit browsers like Chrome/Safari */
 .custom-scrollbar::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
@@ -76,7 +76,7 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #3f3f3f;
+  background-color: #8b8b8b;
 }
 
 /* For Firefox */
