--- a/styles/style.css
+++ b/styles/style.css
@@ -83,3 +83,12 @@
 .custom-scrollbar {
   scrollbar-color: #c1c1c1 #f5f5f5;
 }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(120%);
+  }
+  100% {
+    transform: translateX(-120%);
+  }
+}
